--- a/Puff/Puff/View/Puff/Base.lproj/Map.storyboard
+++ b/Puff/Puff/View/Puff/Base.lproj/Map.storyboard
@@ -8,15 +8,15 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Map View Controller-->
         <scene sceneID="IOH-tV-Y01">
             <objects>
-                <viewController id="T4W-dC-Doj" sceneMemberID="viewController">
+                <viewController id="T4W-dC-Doj" customClass="MapViewController" customModule="Puff" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Ln-aE-Rom">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Gdi-9T-XDL">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gdi-9T-XDL">
                                 <rect key="frame" x="0.0" y="44" width="414" height="400"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="400" id="kIq-3V-ALZ"/>
@@ -32,6 +32,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9HV-GC-Rqo"/>
+                    <connections>
+                        <outlet property="mapOutlet" destination="Gdi-9T-XDL" id="tUN-QG-SN8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tbl-ui-a0K" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
