--- a/Puff/Puff/View/Puff/Base.lproj/Map.storyboard
+++ b/Puff/Puff/View/Puff/Base.lproj/Map.storyboard
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="T4W-dC-Doj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="T4W-dC-Doj">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Map View Controller-->
         <scene sceneID="IOH-tV-Y01">
             <objects>
-                <viewController id="T4W-dC-Doj" sceneMemberID="viewController">
+                <viewController id="T4W-dC-Doj" customClass="MapViewController" customModule="Puff" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Ln-aE-Rom">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Gdi-9T-XDL">
-                                <rect key="frame" x="0.0" y="44" width="414" height="400"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="400" id="kIq-3V-ALZ"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                             </mapView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3dK-9E-uba"/>
@@ -29,9 +26,13 @@
                             <constraint firstItem="3dK-9E-uba" firstAttribute="trailing" secondItem="Gdi-9T-XDL" secondAttribute="trailing" id="7nq-EC-VDU"/>
                             <constraint firstItem="Gdi-9T-XDL" firstAttribute="top" secondItem="3dK-9E-uba" secondAttribute="top" id="XQb-tP-ibF"/>
                             <constraint firstItem="Gdi-9T-XDL" firstAttribute="leading" secondItem="3dK-9E-uba" secondAttribute="leading" id="mWL-z1-CIr"/>
+                            <constraint firstAttribute="bottom" secondItem="Gdi-9T-XDL" secondAttribute="bottom" id="rNN-3G-vYE"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9HV-GC-Rqo"/>
+                    <connections>
+                        <outlet property="mapOutlet" destination="Gdi-9T-XDL" id="VBC-Q0-9jN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tbl-ui-a0K" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
