--- a/Puff/Puff/View/Map.storyboard
+++ b/Puff/Puff/View/Map.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Map View Controller-->
+        <!--攤商地圖-->
         <scene sceneID="IOH-tV-Y01">
             <objects>
-                <viewController id="T4W-dC-Doj" customClass="MapViewController" customModule="Puff" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="攤商地圖" id="T4W-dC-Doj" customClass="MapViewController" customModule="Puff" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Ln-aE-Rom">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -29,7 +29,6 @@
                             <constraint firstAttribute="bottom" secondItem="Gdi-9T-XDL" secondAttribute="bottom" id="rNN-3G-vYE"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="9HV-GC-Rqo"/>
                     <connections>
                         <outlet property="mapOutlet" destination="Gdi-9T-XDL" id="VBC-Q0-9jN"/>
                     </connections>
