--- a/Puff/Puff/View/Nib/Cell/UserProfile/Feature/FeatureCollectionViewCell.xib
+++ b/Puff/Puff/View/Nib/Cell/UserProfile/Feature/FeatureCollectionViewCell.xib
@@ -11,14 +11,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FeatureCollectionViewCell" id="gTV-IL-0wX" customClass="FeatureCollectionViewCell" customModule="Puff" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
+            <rect key="frame" x="0.0" y="0.0" width="130" height="105"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
+                <rect key="frame" x="0.0" y="0.0" width="130" height="105"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XfZ-lv-dZ3">
-                        <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
+                        <rect key="frame" x="0.0" y="0.0" width="130" height="105"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="訂單查詢" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1kX-Sg-eY0">
                                 <rect key="frame" x="0.0" y="69" width="130" height="20"/>
@@ -53,11 +53,11 @@
                 <constraint firstAttribute="bottom" secondItem="XfZ-lv-dZ3" secondAttribute="bottom" id="d4H-XA-APP"/>
                 <constraint firstAttribute="trailing" secondItem="XfZ-lv-dZ3" secondAttribute="trailing" id="q1K-Fd-eHa"/>
             </constraints>
-            <size key="customSize" width="132" height="139"/>
+            <size key="customSize" width="132" height="114"/>
             <connections>
                 <outlet property="nameLabel" destination="1kX-Sg-eY0" id="nXV-4g-Aah"/>
             </connections>
-            <point key="canvasLocation" x="197.10144927536234" y="123.21428571428571"/>
+            <point key="canvasLocation" x="197.10144927536234" y="114.84375"/>
         </collectionViewCell>
     </objects>
     <resources>
