--- a/Puff/Puff/View/Nib/Cell/UserProfile/UserProfile/UserProfileCollectionViewCell.xib
+++ b/Puff/Puff/View/Nib/Cell/UserProfile/UserProfile/UserProfileCollectionViewCell.xib
@@ -11,14 +11,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UserProfileCollectionViewCell" id="gTV-IL-0wX" customClass="UserProfileCollectionViewCell" customModule="Puff" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="366" height="218"/>
+            <rect key="frame" x="0.0" y="0.0" width="366" height="174"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="366" height="218"/>
+                <rect key="frame" x="0.0" y="0.0" width="366" height="174"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xhp-rm-uKj">
-                        <rect key="frame" x="0.0" y="0.0" width="366" height="218"/>
+                        <rect key="frame" x="0.0" y="0.0" width="366" height="174"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Kop-9K-qkg">
                                 <rect key="frame" x="16" y="16" width="334" height="136"/>
@@ -82,13 +82,13 @@
                 <constraint firstItem="xhp-rm-uKj" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="NE1-Sw-EJZ"/>
                 <constraint firstAttribute="trailing" secondItem="xhp-rm-uKj" secondAttribute="trailing" id="UNc-DW-5A1"/>
             </constraints>
-            <size key="customSize" width="366" height="218"/>
+            <size key="customSize" width="366" height="174"/>
             <connections>
                 <outlet property="imageView" destination="jMC-uU-8bG" id="b17-77-DP7"/>
                 <outlet property="memberLevelLabel" destination="l5Y-80-eZX" id="MWC-pN-aVt"/>
                 <outlet property="userNameLabel" destination="xAk-oT-RTK" id="ITY-mR-ciA"/>
             </connections>
-            <point key="canvasLocation" x="362.31884057971018" y="150"/>
+            <point key="canvasLocation" x="362.31884057971018" y="135.26785714285714"/>
         </collectionViewCell>
     </objects>
     <resources>
